[gd_scene load_steps=4 format=3 uid="uid://lbdswjcvmuip"]

[ext_resource type="Script" path="res://Scenes/MainGame/Scripts/main_game.gd" id="1_71tmm"]
[ext_resource type="Texture2D" uid="uid://dgbl75xwva0rl" path="res://Scenes/MainGame/Assets/2D/GameConsole.png" id="2_7mcfv"]
[ext_resource type="PackedScene" uid="uid://ftkh155jwal2" path="res://Scenes/MicroGamesHandler/MicroGamesHandler.tscn" id="4_f57pk"]

[node name="MainGame" type="Node2D"]
process_mode = 3
script = ExtResource("1_71tmm")

[node name="GameConsole" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576, 370)
scale = Vector2(2.453, 3.15672)
texture = ExtResource("2_7mcfv")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="MicroGamesHandler" parent="." instance=ExtResource("4_f57pk")]
position = Vector2(576, 280)

[node name="PauseScreenTint" type="ColorRect" parent="."]
visible = false
offset_left = -24.0
offset_top = -27.0
offset_right = 1170.0
offset_bottom = 680.0
color = Color(0, 0, 0, 0.705882)

[node name="PauseMenuMarginContainer" type="MarginContainer" parent="."]
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 538.0
offset_top = 229.5
offset_right = 614.0
offset_bottom = 330.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuMarginContainer"]
layout_mode = 2
alignment = 1

[node name="Resume" type="Button" parent="PauseMenuMarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Help" type="Button" parent="PauseMenuMarginContainer/VBoxContainer"]
layout_mode = 2
text = "Help"

[node name="ToMenu" type="Button" parent="PauseMenuMarginContainer/VBoxContainer"]
layout_mode = 2
text = "To Menu"

[connection signal="pressed" from="PauseMenuMarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenuMarginContainer/VBoxContainer/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="PauseMenuMarginContainer/VBoxContainer/ToMenu" to="." method="_on_to_menu_pressed"]
